# number-place-rs

./: Cargo.toml  README.md
number-place-lib/: Cargo.toml
number-place-lib/src/: lib.rs
number-place-pattern-generator/: Cargo.toml
number-place-pattern-generator/src/: main.rs
number-place-problem-generator/: Cargo.toml
number-place-problem-generator/src/: main.rs
src_vue/: vue.config.js
src_vue/src/: App.vue
src_vue/src/components/: Board.vue  NumberPlaceGame.vue
src_vue/src/store/: index.js
src_vue/src/utils/: pageTitle.js
src_vue/src/views/: Home.vue
src_yew/: Cargo.toml
src_yew/src/: lib.rs
src_yew/src/components/: board.rs  game.rs  mod.rs  number_selector.rs
src_yew/static/: .gitignore  index.html
