[package]
name = "number-place-problem-enerator"
version = "0.1.0"
authors = ["pirosuke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
itertools = "0.10.0"
rand = "0.8.3"

number-place-lib = { path = "../number-place-lib"}